# AirepoExplainer

./: .env  .env.docker.example  .gitignore  main.py  migrate.py  pyproject.toml
DOCS/: README.md  backend.md  comment_director.md  database.md  frontend.md  indexing-pipeline.md  webhooks.md
alembic/: env.py
alembic/versions/: 0a4251340b71_changed_enum.py  26c6df937faf_need_reponame_and_owner.py  32f245b53d1b_changed_the_schema.py  4a423d8b7229_changed_user_table.py  4b9c2d1e7a10_unique_worker_task_per_repo_stage.py  6e8279ce3636_new_change.py  7044eb9dfabf_user_id_changed_and_webhook_events.py  72dca4622b17_new_changes.py  797044d6653f_new_changes.py  83ac16543f48_added_clone_enum_2.py  88e9023aa80d_changed_enum_values_to_id_type.py  8c09c4609e7c_new_parsing_status.py  94e49cab512f_webhook_events.py  a1b2c3d4e5f6_s3_and_code_connections.py  b7c8d9e0f1a2_drop_s3_repo_columns.py  c8d9e0f1a2b3_repo_pipeline_metadata.py  d2f4a6b8c9e1_semantic_chunk_metadata.py  d4ac55cebbe6_initial.py  db63a5674a8e_changed_enum_2.py  e3f5a7b9c0d2_code_chunk_embeddings.py  f6a4362e3193_added_clone_enum.py  fe0313a069ec_updated_reposotry_table.py
app/: app.py  database.py
app/ARQ/: task.py  worker.py
app/celery/: celery.py  task.py
app/config/: app_config.py  config.py
app/models/: db.py  repo_models.py  users.py  webhook.py
app/router/: authRouter.py  urlRoute.py  webhookRouter.py  webhook_router.py
app/schema/: authSchema.py  config.py  (+1 more)
clerk-react/: index.html  package-lock.json  package.json  vite.config.ts
tests/: test_embedding_phase.py  test_semantic_chunks.py
(+37 files in other folders)
